# ai-agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
desktop/: viewer.py
src/activity_agent/: config_local.py
src/activity_agent/collectors/desktop_context/: __init__.py  stub_collector.py  types.py  win_collector.py
src/activity_agent/collectors/screenshot/: __init__.py  collector.py
src/activity_agent/collectors/system_load/: __init__.py  collector.py
src/activity_agent/collectors/window/: __init__.py  stub_collector.py  types.py  win_collector.py  win_state.py
src/activity_agent/core/: __init__.py  models.py
src/activity_agent/inference/: __init__.py  llm_ollama.py  ocr_text.py
src/activity_agent/inference/llm/: __init__.py  context_loop.py  json_fence.py  ollama.py  openai_compatible.py  prompt.py
src/activity_agent/inference/ocr/: __init__.py  text.py
src/activity_agent/pipeline/: __init__.py  run.py
src/activity_agent/storage/: db.py
src/activity_agent/tools/: __init__.py  paddle_gpu_check.py
src/activity_agent/ui/: __init__.py  llm_format.py  viewer.py  web_app.py
src/activity_agent/ui/static/: style.css
src/activity_agent/ui/templates/: base.html  detail.html  index.html  verified.html
tests/: test_context_loop.py
