[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "activity-agent"
version = "0.1.0"
description = "Local PC activity monitor: screenshots, OCR, LLM, SQLite"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mss>=9.0.0",
    "requests>=2.28.0",
    "paddlepaddle>=3.3.0,<3.4.0",
    "paddleocr>=3.0.0,<3.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
